--- a/tmux.conf
+++ b/tmux.conf
@@ -6,9 +6,13 @@ run -b '~/.tmux/plugins/tpm/tpm'
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-plugin-sysstat'
+#set -g @plugin 'tmux-plugins/tmux-plugin-sysstat'
 
 ## PERSONALISATION
+
+# unbind shift + {->|<-}
+unbind -n S-Left
+unbind -n S-Right
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
@@ -25,13 +29,36 @@ unbind '"'
 unbind %
 
 # reload config file (change file location to your the tmux.conf you want to use)
+unbind r
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
 # switch panes using Alt-arrow without prefix
+unbind -n M-h
+unbind -n M-j
+unbind -n M-k
+unbind -n M-l
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
+# resize panes
+unbind C-Up
+unbind C-Down
+unbind C-Left
+unbind C-Right
+unbind C-S-Up
+unbind C-S-Down
+unbind C-S-Left
+unbind C-S-Right
+bind -r C-Up resize-pane -U
+bind -r C-Down resize-pane -D
+bind -r C-Left resize-pane -L
+bind -r C-Right resize-pane -R
+bind -r C-S-Up resize-pane -U 5
+bind -r C-S-Down resize-pane -D 5
+bind -r C-S-Left resize-pane -L 5
+bind -r C-S-Right resize-pane -R 5
 
 # start windows numbering at 1
 set -g base-index 1 
@@ -40,8 +67,6 @@ set -g base-index 1
 setw -g automatic-rename on
 # renumber windows when a window is closed
 set -g renumber-windows on
-bind C-b rename-pane
-
 
 # set terminal title
 set -g set-titles on
@@ -57,22 +82,56 @@ bind > swap-pane -D
 # swap current pane with the previous one
 bind < swap-pane -U
 
-## statusbar
-set -g status-right-length '100'
+### STATUSBAR
 # default statusbar colors
-set-option -g status-style fg=colour136,bg=colour235 #yellow and base02
-# default window title colors
-set-window-option -g window-status-style fg=colour244,bg=default #base0 and default
-# active window title colors
-set-window-option -g window-status-current-style fg=colour166,bg=default #orange and default
+set-option -g status-style fg=colour136,bg=colour235 #orange and grey
+
+## LEFT statusbar
+	# left statusbar style
+	set -g status-left-style fg=colour136,bg=colour235
+
+	# left statusbar format
+	set -g status-left '#[fg=colour32][#[default]#(echo $USER)#[fg=colour32]@#[default]#H#[fg=colour32]]['
+#	set -g status-left '[#[fg=colour32]#(echo $USER)#[default]@#H]['
+##
+
+## CENTER statusbar
+	# default window title format/style
+	setw -g window-status-style fg=colour136,bg=default #orange and default
+	setw -g window-status-format "#I:#W"
+
+	# active window title format/style
+	setw -g window-status-current-style fg=colour0,bg=colour136 #black and orange
+	setw -g window-status-current-format "#I:#W"
+
+	# last window title format/style
+	setw -g window-status-last-style fg=colour136,bg=default #orange and default
+	setw -g window-status-last-format " #I:#W "
+##
+
+## RIGHT statusbar
+	# right statusbar style
+	set -g status-right-style fg=colour136,bg=colour235
+
+	# right statusbar format
+	set -g status-right '#{prefix_highlight}#[fg=colour32]][#[default] #(cat /proc/loadavg | cut -d " " -f1-3) #[fg=colour32]|#[default] %d-%b-%Y %R#[fg=colour32]]'
+
+	# right statusbar leigth
+	set -g status-right-length '100'
+
+	# prefix_highlight options
+	set -g @prefix_highlight_fg 'colour32' #blue
+	set -g @prefix_highlight_bg 'colour233'  #grey
+##
+
 # pane border
-set-option -g pane-border-style fg=colour235 #base02
-set-option -g pane-active-border-style fg=colour240 #base01
+set-option -g pane-border-style fg=colour240 #gris
+set-option -g pane-active-border-style fg=colour202 #orange
 # message text
-set-option -g message-style fg=colour166,bg=colour235 #orange and base02
+set-option -g message-style fg=colour136,bg=colour235 #orange and grey
 # pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
+set-option -g display-panes-active-colour colour32 #blue
+set-option -g display-panes-colour colour202 #orange
 
-set -g status-right '#{prefix_highlight} #{sysstat_cpu} | #{sysstat_mem} | #[fg=cyan]#(echo $USER)#[default]@#H | %a %d %h %H:%M'
-
+## MOUSE OPTIONS
+set-option -g mouse off
