--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,8 @@
+##
+# setw is an alias of set-windows-option
+# set is an alias of set-option
+# bind is an alias of bind-key
+
 ## PLUGINS
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
@@ -16,11 +21,11 @@ unbind -n S-Right
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set -g prefix C-a
+bind C-a send-prefix
 
 # next window
-bind-key C-a next-window
+bind C-a next-window
 
 # split panes using | and -
 bind _ split-window -h
@@ -84,15 +89,18 @@ bind < swap-pane -U
 
 ### STATUSBAR
 # default statusbar colors
-set-option -g status-style fg=colour136,bg=colour235 #orange and grey
+set -g status-style fg=colour136,bg=colour235 #orange and grey
 
 ## LEFT statusbar
+	# right statusbar leigth
+	set -g status-left-length '30'
+
 	# left statusbar style
 	set -g status-left-style fg=colour136,bg=colour235
 
 	# left statusbar format
 	set -g status-left '#[fg=colour32][#[default]#(echo $USER)#[fg=colour32]@#[default]#H#[fg=colour32]]['
-#	set -g status-left '[#[fg=colour32]#(echo $USER)#[default]@#H]['
+	#set -g status-left '[#[fg=colour32]#(echo $USER)#[default]@#H]['
 ##
 
 ## CENTER statusbar
@@ -105,8 +113,8 @@ set-option -g status-style fg=colour136,bg=colour235 #orange and grey
 	setw -g window-status-current-format "#I:#W"
 
 	# last window title format/style
-	setw -g window-status-last-style fg=colour136,bg=default #orange and default
-	setw -g window-status-last-format " #I:#W "
+	#setw -g window-status-last-style fg=colour136,bg=default #orange and default
+	#setw -g window-status-last-format " #I:#W "
 ##
 
 ## RIGHT statusbar
@@ -125,13 +133,13 @@ set-option -g status-style fg=colour136,bg=colour235 #orange and grey
 ##
 
 # pane border
-set-option -g pane-border-style fg=colour240 #gris
-set-option -g pane-active-border-style fg=colour202 #orange
+set -g pane-border-style fg=colour240 #gris
+set -g pane-active-border-style fg=colour202 #orange
 # message text
-set-option -g message-style fg=colour136,bg=colour235 #orange and grey
+set -g message-style fg=colour136,bg=colour235 #orange and grey
 # pane number display
-set-option -g display-panes-active-colour colour32 #blue
-set-option -g display-panes-colour colour202 #orange
+set -g display-panes-active-colour colour32 #blue
+set -g display-panes-colour colour202 #orange
 
 ## MOUSE OPTIONS
-set-option -g mouse off
+set -g mouse off
