--- a/tmux.conf
+++ b/tmux.conf
@@ -99,7 +99,7 @@ set -g status-style fg=colour136,bg=colour235 #orange and grey
 	set -g status-left-style fg=colour136,bg=colour235
 
 	# left statusbar format
-	set -g status-left '#[fg=colour32][#[default]#(echo $USER)#[fg=colour32]@#[default]#H#[fg=colour32]]['
+	set -g status-left '#[fg=colour32][#[default]#(echo $USER)#[fg=colour32]@#[fg=colour166]#H#[fg=colour32]]['
 	#set -g status-left '[#[fg=colour32]#(echo $USER)#[default]@#H]['
 ##
 
@@ -122,7 +122,7 @@ set -g status-style fg=colour136,bg=colour235 #orange and grey
 	set -g status-right-style fg=colour136,bg=colour235
 
 	# right statusbar format
-	set -g status-right '#{prefix_highlight}#[fg=colour32]][#[default] #(cat /proc/loadavg | cut -d " " -f1-3) #[fg=colour32]|#[default] %d-%b-%Y %R#[fg=colour32]]'
+	set -g status-right '#{prefix_highlight}#[fg=colour32]][#[fg=colour32] #(cat /proc/loadavg | cut -d " " -f1-3) #[fg=colour32]|#[default] %d-%b-%Y %R#[fg=colour32]]'
 
 	# right statusbar leigth
 	set -g status-right-length '100'
