--- a/tmux.conf
+++ b/tmux.conf
@@ -99,11 +99,14 @@ set -g status-style fg=colour136,bg=colour235 #orange and grey
 	set -g status-left-style fg=colour136,bg=colour235
 
 	# left statusbar format
-	set -g status-left '#[fg=colour32][#[default]#(echo $USER)#[fg=colour32]@#[fg=colour166]#H#[fg=colour32]]['
+	set -g status-left '#[fg=colour32]#[default]#(echo $USER)#[fg=colour32]@#[fg=colour166]#H#[fg=colour32]'
 	#set -g status-left '[#[fg=colour32]#(echo $USER)#[default]@#H]['
 ##
 
 ## CENTER statusbar
+	# Status bar in center
+	setw -g status-justify centre
+
 	# default window title format/style
 	setw -g window-status-style fg=colour136,bg=default #orange and default
 	setw -g window-status-format "#I:#W"
