--- a/tmux.conf
+++ b/tmux.conf
@@ -6,12 +6,11 @@
 ## PLUGINS
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm-master/tpm'
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-#set -g @plugin 'tmux-plugins/tmux-plugin-sysstat'
+set -g @plugin 'tmux-plugins/tpm-master'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight-master'
 
 ## PERSONALISATION
 
