--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,9 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight-master'
 
 ## PERSONALISATION
 
+#set colorized terminal
+set -g default-terminal "xterm-256color"
+
 # unbind shift + {->|<-}
 unbind -n S-Left
 unbind -n S-Right
