--- a/tmux.conf
+++ b/tmux.conf
@@ -127,6 +127,7 @@ set -g status-style fg=colour136,bg=colour235 #orange and grey
 	set -g status-right-style fg=colour136,bg=colour235
 
 	# right statusbar format
+	set -g status-right '#{prefix_highlight}#[fg=colour32]][#[fg=colour166] #(cat /proc/loadavg | cut -d " " -f1-3) #[fg=colour32]|#[default] %d-%b-%Y %R#[fg=colour32]]'
 
 	# right statusbar leigth
 	set -g status-right-length '100'
